# colmapThird

./: .gitignore  build.bat  build2.bat  buildHdf5_ms.bat  buildOpencv_ms.bat  build_mingw.bat  build_ms.bat  clean.bat  colmap-3.11.1CMakeLists.txt.cmake  onnx2ncnn.cpp  opencv_annotation.cpp
BA/: BA.sln  BA.vcxproj  BA.vcxproj.filters  BALog.cpp  BALog.h  BASource.cpp  CMakeLists.txt  bal_problem.cpp  bal_problem.h  cameras.cpp  cameras.h  fcxcy_reprojection_error.h  fcxcyk1_reprojection_error.h  fixcamera_reprojection_error.h  fk1_reprojection_error.h  imagePt.cpp  imagePt.h  k1_reprojection_error.h  objectPt.cpp  objectPt.h  optiModel.h  snavely_reprojection_error.h  utils.cpp  utils.h
Deep3d/: bfm.py  diffrast.py  h5_analysis.py  icp.py  load_mats.py  main.py  save.py  transFBM2468.py
GKlib/: CMakeLists.txt
METIS-5.2.1.1/: CMakeLists.txt
PersistentIndependentParticles/: main.py  saverloader.py
PersistentIndependentParticles/nets/: pips.py
PersistentIndependentParticles/utils/: improc.py  samp.py
RegisterImgGui/: MarchCube.cpp  RegisterImgGui.sln  RegisterImgGui.vcxproj  RegisterImgGui.vcxproj.filters  bfm.h  bfm2019.cpp  bitmap.cpp  bitmap.h  browser.cpp  browser.h  bundle_adjustment.cpp  bundle_adjustment.h  camera.cpp  camera.h  camera_rig.cpp  camera_rig.h  colString.cpp  colString.h  colmath.h  colorMap.cpp  cost_functions.h  dnnHelper.cpp  dnnHelper.h  essential_matrix.cpp  essential_matrix.h  estimate.cpp  estimate.h  face.cpp  face.h  image.cpp  image.h  imfilebrowser.h  imgui.ini  imgui_annotation.cpp  imgui_annotation.h  imgui_bfmIter.cpp  imgui_bfmIter.h  imgui_listComponent.cpp  imgui_process.cpp  imgui_register.cpp  (+61 more)
cameraCali/: gui.py  lineCalib.py
cgal-5.6.1/: CMakeLists.txt
colmap-3.10/src/colmap/controllers/: CMakeLists.txt  feature_extraction.cc  feature_matching_utils.cc
colmap-3.10/src/colmap/estimators/: CMakeLists.txt
colmap-3.10/src/colmap/exe/: CMakeLists.txt  colmap.cc
colmap-3.10/src/colmap/feature/: sift.cc
colmap-3.10/src/colmap/math/: CMakeLists.txt
colmap-3.10/src/colmap/scene/: reconstruction.cc
colmap-3.10/src/colmap/sfm/: incremental_mapper.cc
colmap-3.11.1/: CMakeLists.txt
colmap-3.11.1/src/colmap/controllers/: CMakeLists.txt  feature_extraction.cc  feature_matching_utils.cc  incremental_pipeline.cc  incremental_pipeline.h
colmap-3.11.1/src/colmap/estimators/: two_view_geometry.cc  two_view_geometry.h
colmap-3.11.1/src/colmap/exe/: CMakeLists.txt
colmap-3.11.1/src/colmap/feature/: index.cc  sift.cc
colmap-3.11.1/src/colmap/optim/: loransac.h
colmap-3.11.1/src/colmap/scene/: reconstruction.cc
colmap-3.11.1/src/colmap/sfm/: incremental_mapper.cc  incremental_mapper.h
colmap-3.11.1/src/colmap/util/: logging.h  version.cc
flann-1.9.2/: CMakeLists.txt
flatbuffers-24.12.23/: CMakeLists.txt
glew-2.1.0/: glew.pc
hdf5-hdf5-1_14_3/: .gitignore
idr/: dtu_fixed_cameras.json  dtu_fixed_cameras_use_mask.json  dtu_trained_cameras.json  main.py  scene_dataset.py  trian.py
idr/model/: implicit_differentiable_renderer.py  implicit_differentiable_renderer_use_mask.py  loss.py  ray_tracing.py
idr/utils/: general.py  plots.py  rend_util.py
libigl-2.5.0/: CMakeLists.txt
libigl-2.5.0/cmake/: libigl.cmake
maskSynthesis/: data.py  maskSythesis.py  utils.py
ncnn-20250503/src/layer/: instancenorm.cpp
ncnn-20250503/tools/: CMakeLists.txt
ncnn-20250503/tools/onnx/: CMakeLists.txt  onnx2ncnn.cpp
ncnn-20250503/tools/onnx_pips2/: CMakeLists.txt  onnx2ncnn_pips2.cpp
opencv480/: CMakeLists.txt
opencv480/modules/dnn/misc/caffe/: opencv-caffe.pb.cc  opencv-caffe.pb.h
opencv480/modules/dnn/misc/onnx/: opencv-onnx.pb.cc  opencv-onnx.pb.h
opencv480/modules/dnn/misc/tensorflow/: attr_value.pb.cc  attr_value.pb.h  function.pb.cc  function.pb.h  graph.pb.cc  graph.pb.h  op_def.pb.cc  op_def.pb.h  tensor.pb.cc  tensor.pb.h  tensor_shape.pb.cc  tensor_shape.pb.h  types.pb.h  versions.pb.cc  versions.pb.h
pips2/: demo.py  saverloader.py
pips2/nets/: pips2.py
protobuf-3.20.0-rc3/: configure.ac
protobuf-3.20.0-rc3/cmake/: CMakeLists.txt
sqlite-dll-win-x64-3460100/: sqlite3.exp
surf/: dataReader.py  main.py  network.py  ngpMain.py
test/: CMakeLists.txt  test.cpp
tools/: analysisColmapResult.py  colmap_models.h  convertOpencvDecoderToNcnn.py  convertOpencvEncoderToNcnn.py  dlibLandMark.py  figureLandmark.py  figureMediapipeKeyPts.py  generateIDRdata.py  insightFaceLandmark.py  landmarkShapeType.py  makeMask.py  mp42jpg.py  readLabelme.py  registerImg2nerf.py  sam2_onnx_adaptor.py  segment.py  undistotImg.py  writeLabelme.py
zlib-1.2.13/: CMakeLists.txt
